<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kerio Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="action_certificates">Certificates</string>
    
    <string name="title_activity_server">ServerActivity</string>
    <string name="loadingText">Loading data...</string>
    <string name="pref_Title">Settings</string>

    <string name="pref_Operations">Operations</string>
    <string name="pref_Firewalls">Servers</string>
    <string name="pref_AddFirewall">Add Server</string>
    <string name="pref_AddFirewall_desc">Server to be monitored</string>
    
    <string name="pref_Certificates">Certificates</string>
    
    <string name="pref_FirewallHost">Host</string>
    <string name="pref_FirewallHost_desc">Hostname or IP address</string>
    <string name="pref_FirewallUsername">Username</string>
    <string name="pref_FirewallUsername_desc"></string>
    <string name="pref_FirewallPassword">Password</string>
    <string name="pref_FirewallPassword_desc"></string>
    <string name="pref_FirewallDescription">Description</string>
    <string name="pref_FirewallDescription_desc">Custom text</string>
    <string name="pref_DeleteFirewallButton">Delete</string>
    <string name="pref_ApplicationType">Server Type</string>
    <string name="pref_ApplicationType_desc">Select a Kerio Server</string>
    <string-array name="pref_ServerType">
        <item>Kerio Control</item>
        <!-- 
        <item>Kerio Connect</item>
        <item>Kerio Operator</item>
         -->
    </string-array>
    <string name="main_loading">Loading configuration...</string>
    <string name="main_empty">Server list is empty</string>
    <string name="note_connecting">Connecting to server...</string>
    <string name="note_ok">Working properly</string>
    <string name="connectingText">Connecting to server...</string>
    <string name="connectingError">Error occured when connecting to server.</string>
    
    <string name="cert_Warning_header">Certificate warning</string>
    <string name="cert_Warning_body">Certificate provided by the remote server is either invalid or untrusted. Please see the certificate and decide whether to add exception fot this certificate.</string>
    <string name="cert_Warning_trust">Trust</string>
    <string name="cert_Warning_reject">Reject</string>
    
    <string name="cert_Config_header">Certificate</string>
    <string name="cert_Config_body">You trusted this certificate. Here you can review the certificate and decide whether to trust it further or not.</string>
    
    <string name="cert_dn">DN</string>
    <string name="cert_issuerDn">Issuer DN</string>
    <string name="cert_type">Type</string>
    <string name="cert_issuer">Issuer</string>
    <string name="cert_notAfter">Valid not after</string>
    <string name="cert_notBefore">Valid not before</string>
    <string name="cert_serial">Serial number</string>
    <string name="cert_version">Version</string>
    <string name="cert_sigAlg">Signature algorithm</string>
    <string name="cert_sigOid">Signature OID</string>
    
</resources>